@@ -2,6 +2,7 @@
 <b>Note:</b> If you don't wish to appear on this list when making a donation, please tell me.
 
 2008:
+* Paul Sobey
 * Olivier Guéry
 * Dotan Cohen
 * Daniel Schaffrath
