@@ -3,6 +3,9 @@
     * version 1.2
     * IMPORTANT: removed old :buffers! buffer window, as it was ugly and slightly broken
       use "B" or :buffers instead
+    * IMPORTANT: input fields are not blured anymore by default after a page has loaded
+      use :set [no]focuscontent to control the behavior (thanks Paul Sobey for the 
+      generous donation which made this behavior possible)
     * :bdelete accepts an optional argument now
     * renamed some :autocmd, mainly BrowserStartup -> Startup and BrowserExit -> Quit
     * don't pass any ctrl- or alt- prefixed keys to firefox in insert mode
